New feature - User can swipe spacebar to switch input type(KR, EN, SPECIAL etc..). - User can customize setting for swipeable spacebar feature. - Spacebar button text size would be more flexible to text size change.

--- a/app/src/main/res/layout/fragment_keyboard_naratgul_basic.xml
+++ b/app/src/main/res/layout/fragment_keyboard_naratgul_basic.xml
@@ -148,7 +148,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
-                <Button
+                <com.sb.fittingKeyboard.service.ui.CompoundButton
                     android:id="@+id/btn_kr_narat_space"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -156,7 +156,6 @@
                     android:text="SPACE"
                     android:textAllCaps="false"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
-                    android:textSize="@{kbviewmodel.kbFontSize}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
                     app:customTheme_view="@{2}"
