--- a/app/src/main/res/layout/fragment_cursorkeypad.xml
+++ b/app/src/main/res/layout/fragment_cursorkeypad.xml
@@ -10,10 +10,6 @@
             type="com.sb.fittingkeyboard.service.viewmodel.KeyboardViewModel" />
 
         <import type="com.sb.fittingkeyboard.service.keyboardtype.core.InputTypeState" />
-
-        <variable
-            name="kbservice"
-            type="com.sb.fittingkeyboard.service.MainKeyboardService" />
     </data>
 
     <FrameLayout
@@ -36,7 +32,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="@{() -> kbservice.copyText()}"
                     android:text="복사"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:textSize="12dp"
@@ -51,7 +46,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="@{() -> kbservice.pasteText()}"
                     android:text="붙여넣기"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:textSize="12dp"
@@ -66,7 +60,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="@{() -> kbservice.cutText()}"
                     android:text="잘라내기"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:textSize="12dp"
@@ -88,7 +81,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="@{() -> kbservice.selectAllTexts()}"
                     android:text="전체 선택"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:textSize="12dp"
@@ -110,8 +102,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorFirst}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_move_up"
@@ -125,8 +116,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorUp}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_move_to_tail"
@@ -140,8 +130,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorLast}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_delete_previous_char"
@@ -155,8 +144,7 @@
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{3}"
-                    app:onTouch="@{kbservice.RListenerCursorDeleteNextChar}" />
+                    app:customTheme_view="@{3}" />
             </LinearLayout>
 
             <LinearLayout
@@ -170,8 +158,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="@{() -> kbservice.selectWord()}"
-                    android:text="@{kbviewmodel.isSelecting==true ? @string/selection_cancel : @string/selection_activate}"
+                    android:text="@{kbviewmodel.isSelectingText==true ? @string/selection_cancel : @string/selection_activate}"
                     android:textColor="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:textSize="12dp"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
@@ -192,8 +179,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorLeft}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_move_down"
@@ -207,8 +193,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorDown}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_move_right"
@@ -222,8 +207,7 @@
                     app:colorFilter="@{kbviewmodel.kbNormalKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{1}"
-                    app:onTouch="@{kbservice.rListenerCursorRight}" />
+                    app:customTheme_view="@{1}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_delete"
@@ -237,8 +221,7 @@
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}"
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
-                    app:customTheme_view="@{3}"
-                    app:onTouch="@{kbservice.repeatTouchListenerDels[8]}" />
+                    app:customTheme_view="@{3}" />
             </LinearLayout>
 
             <LinearLayout
@@ -254,7 +237,6 @@
                     android:layout_weight=".5"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbservice.setInputTypeState(InputTypeState.KR_NORMAL)}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_kbd_black"
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}"
@@ -275,8 +257,7 @@
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.CURSOR}"
-                    app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[21]}" />
+                    app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_cursorkeypad_enter"
@@ -285,7 +266,6 @@
                     android:layout_weight=".5"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbservice.inputEnter()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_enter_black"
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}"
